--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,7 @@
   <base href="<%= webpackConfig.metadata.baseUrl %>">
 
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
 </head>
 
