--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 
 <body>
 
-  <app>
+  <sv-app>
     <div class="container" id="loading-container">
       <div class="col-md-4 col-md-offset-4">
         <div class="panel panel-default">
@@ -64,7 +64,7 @@
         </div>
       </div>
     </div>
-  </app>
+  </sv-app>
 
   <!-- Google Analytics: change UA-71073175-1 to be your site's ID -->
   <script>
